--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,292 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: var(--font-family-text, sans-serif);
+  background-color: var(--background-color);
+}
+
+/* Header */
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  justify-items: end;
+  align-items: center;
+  height: 100vh;
+  padding: 10px;
+  background-image: var(--background-cover-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.decorated-zone:before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-end: 1px solid var(--decorated-zone-color);
+  border-block-start: 1px solid var(--decorated-zone-color);
+}
+
+.decorated-zone:after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-start: 1px solid var(--decorated-zone-color);
+  border-block-end: 1px solid var(--decorated-zone-color);
+}
+
+.header__rec {
+  content: "rec";
+  position: absolute;
+  top: 10px;
+  right: 19px;
+  padding-right: 20px;
+  color: var(--decorated-zone-color, #ff0070);
+  font-size: var(--font-size-text, 18px);
+  line-height: 25px;
+  text-transform: uppercase;
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 0;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+  background-color: var(--decorated-zone-color, #ff0070);
+}
+
+.header__theme-menu {
+  justify-self: end;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 1.5px 13px;
+  color: var(--theme-button-color);
+  font-size: var(--main-font-size, 18px);
+  line-height: 18px;
+  text-transform: lowercase;
+  background: transparent;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--theme-button-hover, rgb(255, 0, 112, 0.4));
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid var(--theme-button-color, #ff0070);
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--theme-button-color, #ff0070);
+  outline: none;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--theme-button-color, #ff0070);
+}
+
+.title {
+  color: var(--header-title-color, #db00ff);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--mobile-font-size-clamp);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+}
+
+.header__content {
+  color: #000028;
+  font-weight: var(--title-weight, 700);
+  font-size: var(--main-font-size, 18px);
+  line-height: 23.4px;
+}
+
+.title-decor {
+  background-color: var(--accent-color, #ff0070);
+}
+
+/* Main */
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin-block-start: 40px;
+}
+
+.main__section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  padding: 0 10px 0 10px;
+}
+
+.main__section:last-child {
+  margin-block-end: 40px;
+}
+
+.main__title {
+  color: var(--main-title-color);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--font-size-text, 18px);
+  line-height: 1.3;
+}
+
+.main__cards {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.main__card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.main__title-text {
+  color: var(--main-title-text-color);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--font-size-text, 18px);
+  line-height: 1.3;
+}
+
+.main__text {
+  color: var(--main-text-color);
+  font-size: var(--font-size-text, 18px);
+  line-height: 1.3;
+}
+
+.text-shadow {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
+}
+
+.main__special{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.main__unique-title{
+  color: var(--main-title-text-color);
+  font-weight: var(--font-weight-bold, 700);
+  font-size: var(--font-size-text, 18px);
+  line-height: 1.3;
+}
+
+.main__list{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.main__item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.item-text {
+margin-block-start: 10px;
+color: var(--main-title-text-color);
+font-weight: 400;
+font-size: var(--font-size-text, 18px);
+line-height: 1.3;
+}
+
+/* Gallery */
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  /* Mobile: один столбец */
+  grid-template-areas:
+    "sunset"
+    "icecream"
+    "tape"
+    "books"
+    "street";
+  gap: 10px;
+  box-sizing: border-box;
+}
+
+/* Элемент */
+.gallery__item {
+  width: 100%;
+  overflow: hidden;
+  background: #fff;
+}
+
+/* Вложенный элемент */
+.gallery__image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Модификаторы — привязка к grid-area */
+.gallery__item--sunset {
+  grid-area: sunset;
+}
+
+.gallery__item--icecream {
+  grid-area: icecream;
+}
+
+.gallery__item--tape {
+  grid-area: tape;
+}
+
+.gallery__item--books {
+  grid-area: books;
+}
+
+.gallery__item--street {
+  grid-area: street;
+}
+
+.main__card_type_gallery {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+/* Footer */
+
+.footer {
+  position: relative;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  height: 100vh;
+  min-height: 668px;
+  padding: 10px;
+}
+
+.footer .title {
+  text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
 }
