--- a/styles/light.css
+++ b/styles/light.css
@@ -1,8 +1,4 @@
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
   --background-cover-image: url('../images/cover-image-light.png');
   --background-color: #fff1f7;
   --main-title-color: #353430;
@@ -13,4 +9,20 @@
   --main-text-color: #353430;
   --decorated-zone-color: #353430;
 
+  .header__rec {
+    display: none;
+  }
+
+
+  .header__theme-menu-button:focus {
+    border-bottom: 1px solid var(--main-text-color);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-block-end: 1px solid var(--main-text-color);
+  }
+
+    .header__theme-menu-button_active {
+      border: 1px solid var(--main-text-color);
+    }
 }
