--- a/styles/style.css
+++ b/styles/style.css
@@ -68,13 +68,13 @@
 
 .header__theme-menu {
   justify-self: end;
+  margin-inline-start: 0;
 }
 
 .header__theme-menu-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
   gap: 10px;
-
 }
 
 .header__theme-menu-button {
@@ -289,4 +289,100 @@ line-height: 1.3;
 
 .footer .title {
   text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding: 20px;
+  }
+
+  .title {
+    font-size: var(--tablet-desktop-font-size-clamp, clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem));
+  }
+
+  /* .header__title {
+    text to left with not paddings
+  } */
+
+  .header__text {
+    max-width: 364px;
+  }
+
+  .main__section {
+    padding: 20px;
+  }
+
+  .header__rec {
+    top: 20px;
+    padding-right: 30px;
+  }
+
+  .header__rec::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .main {
+    gap: 40px;
+  }
+
+   .main__section:nth-child(odd) {
+    grid-template-columns: 1fr 2fr;
+    grid-auto-rows: repeat(auto-fill, 1fr);
+  }
+
+  .main__title {
+    max-width: 236px;
+  }
+
+  .gallery {
+    /* План для планшета: два столбца */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      "sunset sunset icecream"
+      "tape books icecream"
+      "tape street street";
+      gap: 20px;
+    margin-block-start: 10px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__text {
+    max-width: 491px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+
+  }
+
+  .header__theme-menu-list {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  .main__title {
+    max-width: 315px;
+  }
+  .main__special {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .footer .title {
+  text-shadow: 2px 2px 0 #ff0070;
+}
 }
