--- a/styles/style.css
+++ b/styles/style.css
@@ -300,9 +300,10 @@ line-height: 1.3;
     font-size: var(--tablet-desktop-font-size-clamp, clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem));
   }
 
-  /* .header__title {
-    text to left with not paddings
-  } */
+  .header__title {
+    justify-self: start;
+    margin-left: -20px;
+  }
 
   .header__text {
     max-width: 364px;
