--- a/styles/light.css
+++ b/styles/light.css
@@ -1,5 +1,5 @@
 :root.theme-light {
-  --background-cover-image: url('../images/cover-image-light.png');
+  --background-cover-image: url("../images/cover-image-light.png");
   --background-color: #fff1f7;
   --main-title-color: #353430;
   --accent-color: #ff8dcb;
@@ -13,7 +13,6 @@
     display: none;
   }
 
-
   .header__theme-menu-button:focus {
     border-bottom: 1px solid var(--main-text-color);
   }
@@ -22,7 +21,7 @@
     border-block-end: 1px solid var(--main-text-color);
   }
 
-    .header__theme-menu-button_active {
-      border: 1px solid var(--main-text-color);
-    }
+  .header__theme-menu-button_active {
+    border: 1px solid var(--main-text-color);
+  }
 }
