--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
 .page {
   font-family: var(--font-family-text, sans-serif);
   background-color: var(--background-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /* Header */
@@ -15,9 +19,6 @@
   height: 100vh;
   padding: 10px;
   background-image: var(--background-cover-image);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .decorated-zone:before {
@@ -182,20 +183,20 @@
   text-shadow: 2px 2px 0 var(--accent-color);
 }
 
-.main__special{
+.main__special {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
-.main__unique-title{
+.main__unique-title {
   color: var(--main-title-text-color);
   font-weight: var(--font-weight-bold, 700);
   font-size: var(--font-size-text, 18px);
   line-height: 1.3;
 }
 
-.main__list{
+.main__list {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -208,11 +209,11 @@
 }
 
 .item-text {
-margin-block-start: 10px;
-color: var(--main-title-text-color);
-font-weight: 400;
-font-size: var(--font-size-text, 18px);
-line-height: 1.3;
+  margin-block-start: 10px;
+  color: var(--main-title-text-color);
+  font-weight: 400;
+  font-size: var(--font-size-text, 18px);
+  line-height: 1.3;
 }
 
 /* Gallery */
@@ -297,7 +298,10 @@ line-height: 1.3;
   }
 
   .title {
-    font-size: var(--tablet-desktop-font-size-clamp, clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem));
+    font-size: var(
+      --tablet-desktop-font-size-clamp,
+      clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem)
+    );
   }
 
   .header__title {
@@ -323,7 +327,7 @@ line-height: 1.3;
     position: absolute;
     top: 10px;
     right: 10px;
-}
+  }
 
   .decorated-zone::before {
     top: 20px;
@@ -339,7 +343,7 @@ line-height: 1.3;
     gap: 40px;
   }
 
-   .main__section:nth-child(odd) {
+  .main__section:nth-child(odd) {
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: repeat(auto-fill, 1fr);
   }
@@ -355,7 +359,7 @@ line-height: 1.3;
       "sunset sunset icecream"
       "tape books icecream"
       "tape street street";
-      gap: 20px;
+    gap: 20px;
     margin-block-start: 10px;
   }
 }
@@ -368,7 +372,6 @@ line-height: 1.3;
   .header__theme-menu {
     justify-self: center;
     align-self: start;
-
   }
 
   .header__theme-menu-list {
@@ -384,6 +387,6 @@ line-height: 1.3;
     grid-template-columns: repeat(3, 1fr);
   }
   .footer .title {
-  text-shadow: 2px 2px 0 #ff0070;
-}
+    text-shadow: 2px 2px 0 #ff0070;
+  }
 }
