Fix styles, add prefers-color-scheme, fix PP

--- a/styles/light.css
+++ b/styles/light.css
@@ -8,20 +8,18 @@
   --theme-button-hover: rgba(50, 49, 45, 0.4);
   --main-text-color: #353430;
   --decorated-zone-color: #353430;
+}
 
-  .header__rec {
-    display: none;
-  }
-
-  .header__theme-menu-button:focus {
-    border-bottom: 1px solid var(--main-text-color);
-  }
-
-  .header__theme-menu-button:focus-visible {
-    border-block-end: 1px solid var(--main-text-color);
-  }
-
-  .header__theme-menu-button_active {
-    border: 1px solid var(--main-text-color);
+@media (prefers-color-scheme: light) {
+  :root {
+    --background-cover-image: url("../images/cover-image-light.png");
+    --background-color: #fff1f7;
+    --main-title-color: #353430;
+    --accent-color: #ff8dcb;
+    --header-title-color: #ffc2e6;
+    --theme-button-color: #353430;
+    --theme-button-hover: rgba(50, 49, 45, 0.4);
+    --main-text-color: #353430;
+    --decorated-zone-color: #353430;
   }
 }
