--- a/styles/dark.css
+++ b/styles/dark.css
@@ -8,4 +8,5 @@
   --theme-button-hover: rgba(255, 0, 112, 0.4);
   --main-text-color: #f1b2ce;
   --decorated-zone-color: #ff0070;
+  --display-rec: block; 
 }
