--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@
   position: absolute;
   top: 10px;
   right: 19px;
+  display: var(--display-rec);
   padding-right: 20px;
   color: var(--decorated-zone-color, #ff0070);
   font-size: var(--font-size-text, 18px);
@@ -306,22 +307,6 @@
   text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
 }
 
-.theme-light .header__rec {
-  display: none;
-}
-
-.theme-light .header__theme-menu-button:focus {
-  border-bottom: 1px solid var(--theme-button-color);
-}
-
-.theme-light .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--theme-button-color);
-}
-
-.theme-light .header__theme-menu-button_active {
-  border: 1px solid var(--theme-button-color);
-}
-
 @media (min-width: 768px) {
   .header {
     padding: 20px;
@@ -330,8 +315,6 @@
   .header__rec {
     top: 20px;
     right: 29px;
-    font-size: var(--font-size-text, 18px);
-    line-height: 25px;
   }
 
   .header__rec::after {
